<resources>
    <string name="app_name">Onix-Android</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_note">Create note</string>
    <string name="text">Text</string>
    <string name="some_tag">Some tag</string>
    <string name="tag">Tag</string>
    <string name="title">Title</string>
    <string name="created">Created</string>
</resources>
